--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,4 @@
-<div id="header" data-gnl="24 24p ortada göbekte">
-  <div data-gnl="ortada göbekte" data-ort="solda">
+<div id="header" data-gnl="24 24p ortada göbekte" data-ort="solda">
     <ul class="menü-genel" data-gnl="0 göbekte">
       <li><a href="https://data-deveb.github.io" class="logo beri-sol-1">deveb</a></li>
     </ul>
@@ -14,5 +13,4 @@
             <li><a href="https://twitter.com/datadeveb"> <i class="fa fa-twitter" aria-hidden="true"></i></a></li>
       <li><a href="https://www.facebook.com/groups/1818283228485179/"> <i class="fa fa-users" aria-hidden="true"></i></a></li>
     </ul>
-  </div>
 </div>
