--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,7 @@
   {% include header.html %}
   </header>
   <div data-gnl="1g uzat oluk-çevre sığdır">
-    <div class="sol-bölge" data-gnl="24 24p " data-kçk="4 24p sığdır">{% include icerik.html %}</div>
+    <div class="sol-bölge" data-gnl="24 24p " data-kçk="4 24p sığdır" style="overflow-y:scroll;">{% include icerik.html %}</div>
     <div data-gnl="24 24p oluk " data-kçk="20 24p sığdır">
       {% if page.title %}
       <div data-gnl="1 1p" class="sayfa-başlığı">
