--- a/_includes/head.html
+++ b/_includes/head.html
@@ -19,6 +19,12 @@
 <script src="https://data-deveb.github.io/assets/plugins/prism/prism.js"></script>
 
 
+<script src="https://data-deveb.github.io/assets/js/deveb.js"></script>
+<script
+			  src="https://code.jquery.com/jquery-3.2.1.min.js"
+			  integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+			  crossorigin="anonymous"></script>
+
 <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
 <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
 <!--[if lt IE 9]>
