--- a/_includes/head.html
+++ b/_includes/head.html
@@ -18,8 +18,10 @@
 
 <script src="https://data-deveb.github.io/assets/plugins/prism/prism.js"></script>
 
-<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js">
-</script>
+<script
+			  src="https://code.jquery.com/jquery-1.12.4.min.js"
+			  integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ="
+			  crossorigin="anonymous"></script>
 <script type="text/javascript" src="https://data-deveb.github.io/assets/js/deveb.js"></script>
 
 <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
