--- a/_includes/head.html
+++ b/_includes/head.html
@@ -18,10 +18,7 @@
 
 <script src="https://data-deveb.github.io/assets/plugins/prism/prism.js"></script>
 
-<script
-			  src="https://code.jquery.com/jquery-1.12.4.min.js"
-			  integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ="
-			  crossorigin="anonymous"></script>
+<script src="http://code.jquery.com/jquery-1.6.2.min.js"></script>
 <script type="text/javascript" src="https://data-deveb.github.io/assets/js/deveb.js"></script>
 
 <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
