--- a/_includes/head.html
+++ b/_includes/head.html
@@ -17,8 +17,11 @@
       href="https://data-deveb.github.io/assets/plugins/prism/prism.css">
 
 <script src="https://data-deveb.github.io/assets/plugins/prism/prism.js"></script>
-
-<script src="http://code.jquery.com/jquery-1.6.2.min.js"></script>
+<script
+			  src="https://code.jquery.com/jquery-2.2.4.min.js"
+			  integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
+			  crossorigin="anonymous"></script>
+		
 <script type="text/javascript" src="https://data-deveb.github.io/assets/js/deveb.js"></script>
 
 <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
