--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,12 +9,12 @@
 <link href="https://fonts.googleapis.com/css?family=Comfortaa:300,400,700&amp;subset=latin-ext" rel="stylesheet">
 <link rel="stylesheet" href="https://data-deveb.github.io/assets/css/font-awesome.min.css">
 
-<script
+<!--<script
 			  src="https://code.jquery.com/jquery-2.2.4.min.js"
 			  integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
 			  crossorigin="anonymous"></script>
 
-<script type="text/javascript" src="https://data-deveb.github.io/assets/js/deveb.js"></script>
+<script type="text/javascript" src="https://data-deveb.github.io/assets/js/deveb.js"></script> -->
 
 <link href="https://data-deveb.github.io/assets/css/deveb.css" rel="stylesheet">
 <link href="https://data-deveb.github.io/assets/css/deveb.ilkel.css" rel="stylesheet">
