--- a/_layouts/tek.html
+++ b/_layouts/tek.html
@@ -4,13 +4,13 @@
 {% include head.html %}
 </head>
 <body data-gnl="sütun">
-  <header data-gnl="24" class="header">
+  <header data-gnl="24 24p" class="header">
   {% include header.html %}
   </header>
-  <div data-gnl="23 göbekte-ol" data-dev="kaplama">
+  <div data-gnl="23 24p göbekte-ol" data-dev="kaplama">
   {{ content }}
   </div>
-  <footer data-gnl="24">
+  <footer data-gnl="24 24p">
   {% include foot.html %}
 </footer>
 </body>
