--- a/assets/css/deveb.css
+++ b/assets/css/deveb.css
@@ -44,7 +44,7 @@
 
     a{
       text-decoration: none;  /* Bağ verilen tüm yazıların altı çizili durumunu kaldırma */
-      color:#394eff;
+      color:#4c41a1;
     }
 
 /*  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
