--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,7 +12,7 @@
     <div data-gnl="24 24p oluk " data-kçk="20 24p sığdır">
       {% if page.title %}
       <div data-gnl="1 1p" class="sayfa-başlığı">
-        <h1 data-gnl="23 24p ortada ortada-ol">{{ page.title }}</h1>
+        <h1 data-gnl="24 24p ortada-ol">{{ page.title }}</h1>
       </div>
       {% endif %}
       <div data-gnl="1 1p">
