--- a/assets/css/deveb.genel.css
+++ b/assets/css/deveb.genel.css
@@ -97,16 +97,17 @@ body{
 
 
 .sayfa-başlığı{
-	padding:48px 0;
+	padding: 20px 0;
 	font-size: 26px;
-	letter-spacing: 2px;
+	letter-spacing: 2px
 }
 .sayfa-başlığı h1{
 	font-weight: 300;
-	color:rgb(114, 137, 218);
-	margin-top: 0;
-	margin-bottom: 0;
-font-size: 30px;
+color: rgb(114, 137, 218);
+margin-top: 0;
+margin-bottom: 0;
+font-size: 42px;
+letter-spacing: 0px;
 }
 
 
