--- a/assets/css/deveb.genel.css
+++ b/assets/css/deveb.genel.css
@@ -9,6 +9,10 @@
 }*/
 body{
 	background-color: #f8f8f8;
+	font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
+}
+p{
+	line-height: 1.5;
 }
 .bg{
 	background-image: url(../img/bg.png),linear-gradient(#2c2171, #292070 15%);
