İngilizce deveb scss

--- a/assets/scss/dvb.css
+++ b/assets/scss/dvb.css
@@ -4,6 +4,7 @@
 /* Kap Örgüsü */
 /* Konumlama - Kap Örgüsü */
 /* Durumlama - Kap Örgüsü */
+/* */
 /*  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 /*  AYARLAR & TEMİZLEME
 /*  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
