--- a/_includes/icerik.html
+++ b/_includes/icerik.html
@@ -9,6 +9,7 @@
       <li><a href="/belgeler/ekran-orgusu.html" class="{% if page.url == '/belgeler/ekran-orgusu.html' %}etkin{% endif %}">Ekran Örgüsü</a>
       <li><a href="/belgeler/kap-orgusu.html" class="{% if page.url == '/belgeler/kap-orgusu.html' %}etkin{% endif %}">Kap Örgüsü</a>
         <ul>
+          <li><a href="/belgeler/kap-orgusu/parca-duzeni.html" class="{% if page.url == '/belgeler/kap-orgusu/parca-duzeni.html' %}etkin{% endif %}">Parça Düzeni</a></li>
           <li><a href="/belgeler/kap-orgusu/genlesme-duzeni.html" class="{% if page.url == '/belgeler/kap-orgusu/genlesme-duzeni.html' %}etkin{% endif %}">Genleşme Düzeni</a></li>
           <li><a href="/belgeler/kap-orgusu/konumlama.html" class="{% if page.url == '/belgeler/kap-orgusu/konumlama.html' %}etkin{% endif %}">Konumlama</a></li>
           <li><a href="/belgeler/kap-orgusu/siralama.html" class="{% if page.url == '/belgeler/kap-orgusu/siralama.html' %}etkin{% endif %}">Sıralama</a></li>
