--- a/assets/scss/_ozel.scss
+++ b/assets/scss/_ozel.scss
@@ -19,3 +19,10 @@ html{
 a{
   text-decoration: none;
   color: #4c41a1; }
+
+
+
+    .önizleme{background-color:#efefef; padding:10px;}
+    .önizleme [data-gnl]{border:1px solid #2c2171; background-color: #4c41a1; padding:10px; color:#eee;}
+    .önizleme h3 {color:#999;margin:0 0 10px 0;}
+    pre.language-html{ max-height:50vh; overflow-y: auto;}
