--- a/assets/css/deveb.css
+++ b/assets/css/deveb.css
@@ -1520,4 +1520,4 @@ S06 DEV-ilker (dev) veya (dev-ilker) veya (hgo) | Ekran ölçeği: 1900px ≤ *
   .önizleme{background-color:#efefef; padding:10px;}
   .önizleme [data-gnl]{border:1px solid #2c2171; background-color: #4c41a1; padding:10px; color:#eee;}
   .önizleme h3 {color:#999;margin:0 0 10px 0;}
-  pre.language-html{ max-height:50vh; overflow-y: auto;}
+  pre.language-html{ max-height:50vh; overflow-y: auto;z-index: 1000;}
