--- a/assets/css/deveb.genel.css
+++ b/assets/css/deveb.genel.css
@@ -323,3 +323,13 @@ ul.liste-temiz li{
 		50% {margin-top:0px;}
 		100% {margin-top:60px;}
 	}
+
+
+
+
+
+
+	.önizleme{background-color:#efefef; padding:10px;}
+	.önizleme [data-gnl]{border:1px solid #2c2171; background-color: #4c41a1; padding:10px; color:#eee;}
+	.önizleme h3 {color:#999;margin:0 0 10px 0;}
+	pre.language-html{ max-height:50vh; overflow-y: auto;z-index: 1000;}
