--- a/assets/css/deveb.css
+++ b/assets/css/deveb.css
@@ -1355,6 +1355,8 @@ S06 DEV-ilker (dev) veya (dev-ilker) veya (hgo) | Ekran ölçeği: 1900px ≤ *
       -ms-flex-order:2;
           order:2;
   left:0;
+  top:0;
+  height:0;
 }
 [data-sekme] > input:checked + label + div{
   position: relative;
@@ -1363,6 +1365,7 @@ S06 DEV-ilker (dev) veya (dev-ilker) veya (hgo) | Ekran ölçeği: 1900px ≤ *
   -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
   -webkit-transition: all ease 0.6s;
   transition: all ease 0.6s;
+  height: auto;
 }
 
 [data-sekme~="sağda"]{
