Sekme örgüsü yayında

--- a/_includes/icerik.html
+++ b/_includes/icerik.html
@@ -19,6 +19,7 @@
           <li><a href="/belgeler/ornekler/kap-orgusu-esit-bolme-2.html" class="{% if page.url == '/belgeler/ornekler/kap-orgusu-esit-bolme-2.html' %}etkin{% endif %}">Eşit Bölme #2</a></li>
         </ul>
       </li>
+      <li><a href="/belgeler/sekme-orgusu.html" class="{% if page.url == '/belgeler/sekme-orgusu.html' %}etkin{% endif %}">Sekme Örgüsü</a></li>
       <li><a href="/belgeler/renk-orgusu.html" class="{% if page.url == '/belgeler/renk-orgusu.html' %}etkin{% endif %}">Renk Örgüsü</a></li>
       <li><a href="/belgeler/terimler.html" class="{% if page.url == '/belgeler/terimler.html' %}etkin{% endif %}">Terimler</a></li>
 
