--- a/_includes/head.html
+++ b/_includes/head.html
@@ -16,7 +16,7 @@
 
 <script type="text/javascript" src="https://data-deveb.github.io/assets/js/deveb.js"></script>
 
-<link href="https://data-deveb.github.io/assets/css/deveb.css" rel="stylesheet">
+<link href="https://data-deveb.github.io/assets/scss/dvb.css" rel="stylesheet">
 <link href="https://data-deveb.github.io/assets/css/deveb.ilkel.css" rel="stylesheet">
 <link href="https://data-deveb.github.io/assets/css/deveb.genel.css" rel="stylesheet">
 
