--- a/assets/scss/dvb.css
+++ b/assets/scss/dvb.css
@@ -59,6 +59,14 @@ html { font-family: 'Roboto', sans-serif; font-size: 14px; color: #333; }
 
 a { text-decoration: none; color: #4c41a1; }
 
+.önizleme { background-color: #efefef; padding: 10px; }
+
+.önizleme [data-gnl] { border: 1px solid #2c2171; background-color: #4c41a1; padding: 10px; color: #eee; }
+
+.önizleme h3 { color: #999; margin: 0 0 10px 0; }
+
+pre.language-html { max-height: 50vh; overflow-y: auto; }
+
 /*  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 /*  G00 GENEL | Ekran ölçeği: 0 ≤ * < ∞
 /*  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
@@ -1193,7 +1201,7 @@ S06 DEV-ilker ($dev) veya (dev-ilker) veya (hgo) | Ekran ölçeği: 1900px ≤ *
   [data-kcm~="bunu-gizle"] { display: none !important; } }
 /* ========================================================================== SEKME ÖRGÜSÜ s0.1 Sadece css yöntemiyle kurulmuş sekme örgüsü
 ----------------------------------------------------------------------------- */
-[data-sekme] { display: -webkit-box; display: -ms-flexbox; display: flex; -ms-flex-wrap: wrap; flex-wrap: wrap; -webkit-box-orient: horizontal; -webkit-box-direction: normal; -ms-flex-direction: row; flex-direction: row; position: relative; }
+[data-sekme] { display: -webkit-box; display: -ms-flexbox; display: flex; -ms-flex-wrap: wrap; flex-wrap: wrap; -webkit-box-orient: horizontal; -webkit-box-direction: normal; -ms-flex-direction: row; flex-direction: row; position: relative; z-index: 999; }
 
 [data-sekme] > input { display: none; }
 
