--- a/assets/scss/_caprazlama.scss
+++ b/assets/scss/_caprazlama.scss
@@ -74,6 +74,8 @@
     -ms-flex-align: start;
     -ms-grid-row-align: flex-start;
     align-items: flex-start;
+    -ms-flex-line-pack:start;
+        align-content:flex-start;
 }
 
 @mixin göbekte {
@@ -81,6 +83,8 @@
     -ms-flex-align: center;
     -ms-grid-row-align: center;
     align-items: center;
+    -ms-flex-line-pack:center;
+        align-content:center;
 }
 
 @mixin altta {
@@ -88,6 +92,8 @@
     -ms-flex-align: end;
     -ms-grid-row-align: flex-end;
     align-items: flex-end;
+    -ms-flex-line-pack:end;
+        align-content:flex-end;
 }
 
 @mixin üstte-ol {
