--- a/assets/scss/dvb.css
+++ b/assets/scss/dvb.css
@@ -71,7 +71,7 @@ pre.language-html { max-height: 50vh; overflow-y: auto; }
 /*  G00 GENEL | Ekran ölçeği: 0 ≤ * < ∞
 /*  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
 /*  GS1 KAP ÖRGÜSÜ */
-[data-gnl] { display: -webkit-box; display: -ms-flexbox; display: flex; -ms-flex-wrap: wrap; flex-wrap: wrap; -webkit-box-align: start; -ms-flex-align: start; -ms-grid-row-align: flex-start; align-items: flex-start; }
+[data-gnl] { display: -webkit-box; display: -ms-flexbox; display: flex; -ms-flex-wrap: wrap; flex-wrap: wrap; -webkit-box-align: start; -ms-flex-align: start; -ms-grid-row-align: flex-start; align-items: flex-start; -ms-flex-line-pack: start; align-content: flex-start; }
 
 [data-gnl~="sütun"] { -ms-flex-direction: column; -moz-flex-direction: column; -webkit-box-orient: vertical; -webkit-box-direction: normal; flex-direction: column; -ms-flex-wrap: nowrap; flex-wrap: nowrap; -webkit-box-align: stretch; -ms-flex-align: stretch; -ms-grid-row-align: stretch; align-items: stretch; }
 
@@ -352,7 +352,7 @@ body[data-gnl~="sütun"] > footer { margin-top: auto; }
 /*  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 S01 [data-ufk] UFAK-BÜYÜKLERİYLE | 300px ≤ * ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
 @media screen and (min-width: 300px) { :root { --oluk:10px; --ara:10px; }
-  [data-ufk]:not([data-gnl]) { display: -webkit-box; display: -ms-flexbox; display: flex; -ms-flex-wrap: wrap; flex-wrap: wrap; -ms-flex-item-align: start; align-self: flex-start; }
+  [data-ufk]:not([data-gnl]) { display: -webkit-box; display: -ms-flexbox; display: flex; -ms-flex-wrap: wrap; flex-wrap: wrap; -webkit-box-align: start; -ms-flex-align: start; -ms-grid-row-align: flex-start; align-items: flex-start; -ms-flex-line-pack: start; align-content: flex-start; }
   [data-ufk~="sığdır"] { -webkit-box-flex: 1 !important; -ms-flex: 1 1 0 !important; flex: 1 1 0 !important; overflow: auto; height: 100%; }
   /*  Kap Örgüsü Parça Ayarları */
   [data-ufk~="1"] { --parça: 1; }
@@ -486,7 +486,7 @@ S01 [data-ufk] UFAK-BÜYÜKLERİYLE | 300px ≤ * ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   [data-ufk~="gizle"], [data-ufk~="büyükleriyle-gizle"], [data-mnk~="büyükleri-gizle"], [data-mnk~="diğerlerini-gizle"] { display: none !important; } }
 /*  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 S02 KÇK-ilker ($kçk) veya (kçk-ilker) | Ekran ölçeği: 576px ≤ * ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
-@media screen and (min-width: 576px) { [data-kçk]:not([data-gnl]) { display: -webkit-box; display: -ms-flexbox; display: flex; -ms-flex-wrap: wrap; flex-wrap: wrap; -ms-flex-item-align: start; align-self: flex-start; }
+@media screen and (min-width: 576px) { [data-kçk]:not([data-gnl]) { display: -webkit-box; display: -ms-flexbox; display: flex; -ms-flex-wrap: wrap; flex-wrap: wrap; -webkit-box-align: start; -ms-flex-align: start; -ms-grid-row-align: flex-start; align-items: flex-start; -ms-flex-line-pack: start; align-content: flex-start; }
   [data-kçk~="sığdır"] { -webkit-box-flex: 1 !important; -ms-flex: 1 1 0 !important; flex: 1 1 0 !important; overflow: auto; height: 100%; }
   /*  Kap Örgüsü Parça Ayarları */
   [data-kçk~="1"] { --parça: 1; }
@@ -620,7 +620,7 @@ S02 KÇK-ilker ($kçk) veya (kçk-ilker) | Ekran ölçeği: 576px ≤ * ~~~~~~~~
   [data-kçk~="gizle"], [data-kçk~="büyükleriyle-gizle"], [data-ufk~="büyükleri-gizle"], [data-ufk~="diğerlerini-gizle"] { display: none !important; } }
 /*  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 S03 ORTA-ilker ($ort) veya (ort-ilker) | Ekran ölçeği: 768px ≤ * ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
-@media screen and (min-width: 768px) { [data-ort]:not([data-gnl]) { display: -webkit-box; display: -ms-flexbox; display: flex; -ms-flex-wrap: wrap; flex-wrap: wrap; -ms-flex-item-align: start; align-self: flex-start; }
+@media screen and (min-width: 768px) { [data-ort]:not([data-gnl]) { display: -webkit-box; display: -ms-flexbox; display: flex; -ms-flex-wrap: wrap; flex-wrap: wrap; -webkit-box-align: start; -ms-flex-align: start; -ms-grid-row-align: flex-start; align-items: flex-start; -ms-flex-line-pack: start; align-content: flex-start; }
   [data-ort~="sığdır"] { -webkit-box-flex: 1 !important; -ms-flex: 1 1 0 !important; flex: 1 1 0 !important; overflow: auto; height: 100%; }
   /*  Kap Örgüsü Parça Ayarları */
   [data-ort~="1"] { --parça: 1; }
@@ -754,7 +754,7 @@ S03 ORTA-ilker ($ort) veya (ort-ilker) | Ekran ölçeği: 768px ≤ * ~~~~~~~~~~
   [data-ort~="gizle"], [data-ort~="büyükleriyle-gizle"], [data-kçk~="büyükleri-gizle"], [data-kçk~="diğerlerini-gizle"] { display: none !important; } }
 /*  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 S04 BÜYÜK-ilker ($byk) veya (byk-ilker) | Ekran ölçeği: 992px ≤ * ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
-@media screen and (min-width: 992px) { [data-byk]:not([data-gnl]) { display: -webkit-box; display: -ms-flexbox; display: flex; -ms-flex-wrap: wrap; flex-wrap: wrap; -ms-flex-item-align: start; align-self: flex-start; }
+@media screen and (min-width: 992px) { [data-byk]:not([data-gnl]) { display: -webkit-box; display: -ms-flexbox; display: flex; -ms-flex-wrap: wrap; flex-wrap: wrap; -webkit-box-align: start; -ms-flex-align: start; -ms-grid-row-align: flex-start; align-items: flex-start; -ms-flex-line-pack: start; align-content: flex-start; }
   [data-byk~="sığdır"] { -webkit-box-flex: 1 !important; -ms-flex: 1 1 0 !important; flex: 1 1 0 !important; overflow: auto; height: 100%; }
   /*  Kap Örgüsü Parça Ayarları */
   [data-byk~="1"] { --parça: 1; }
@@ -888,7 +888,7 @@ S04 BÜYÜK-ilker ($byk) veya (byk-ilker) | Ekran ölçeği: 992px ≤ * ~~~~~~~
   [data-byk~="gizle"], [data-byk~="büyükleriyle-gizle"], [data-ort~="büyükleri-gizle"], [data-ort~="diğerlerini-gizle"] { display: none !important; } }
 /*  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 S05 KOCAMAN-ilker ($kcm) veya (kcm-ilker) | Ekran ölçeği: 1200px ≤ * ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
-@media screen and (min-width: 1200px) { [data-kcm]:not([data-gnl]) { display: -webkit-box; display: -ms-flexbox; display: flex; -ms-flex-wrap: wrap; flex-wrap: wrap; -ms-flex-item-align: start; align-self: flex-start; }
+@media screen and (min-width: 1200px) { [data-kcm]:not([data-gnl]) { display: -webkit-box; display: -ms-flexbox; display: flex; -ms-flex-wrap: wrap; flex-wrap: wrap; -webkit-box-align: start; -ms-flex-align: start; -ms-grid-row-align: flex-start; align-items: flex-start; -ms-flex-line-pack: start; align-content: flex-start; }
   [data-kcm~="sığdır"] { -webkit-box-flex: 1 !important; -ms-flex: 1 1 0 !important; flex: 1 1 0 !important; overflow: auto; height: 100%; }
   /*  Kap Örgüsü Parça Ayarları */
   [data-kcm~="1"] { --parça: 1; }
@@ -1022,7 +1022,7 @@ S05 KOCAMAN-ilker ($kcm) veya (kcm-ilker) | Ekran ölçeği: 1200px ≤ * ~~~~~~
   [data-kcm~="gizle"], [data-kcm~="büyükleriyle-gizle"], [data-byk~="büyükleri-gizle"], [data-byk~="diğerlerini-gizle"] { display: none !important; } }
 /*  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 S06 DEV-ilker ($dev) veya (dev-ilker) veya (hgo) | Ekran ölçeği: 1900px ≤ * ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
-@media screen and (min-width: 1900px) { [data-dev]:not([data-gnl]) { display: -webkit-box; display: -ms-flexbox; display: flex; -ms-flex-wrap: wrap; flex-wrap: wrap; -ms-flex-item-align: start; align-self: flex-start; }
+@media screen and (min-width: 1900px) { [data-dev]:not([data-gnl]) { display: -webkit-box; display: -ms-flexbox; display: flex; -ms-flex-wrap: wrap; flex-wrap: wrap; -webkit-box-align: start; -ms-flex-align: start; -ms-grid-row-align: flex-start; align-items: flex-start; -ms-flex-line-pack: start; align-content: flex-start; }
   [data-dev~="sığdır"] { -webkit-box-flex: 1 !important; -ms-flex: 1 1 0 !important; flex: 1 1 0 !important; overflow: auto; height: 100%; }
   /*  Kap Örgüsü Parça Ayarları */
   [data-dev~="1"] { --parça: 1; }
