--- a/assets/scss/dvb-ing.css
+++ b/assets/scss/dvb-ing.css
@@ -5332,6 +5332,7 @@ S06 DEV-ilker ($dev) veya (dev-ilker) veya (hgo) | Ekran ölçeği: 1900px ≤ *
   -ms-flex-order: 2;
   order: 2;
   left: 0;
+  flex-wrap: wrap;
 }
 
 [data-sekme] > input:checked + label + div {
