--- a/assets/scss/dvb.css
+++ b/assets/scss/dvb.css
@@ -1235,6 +1235,10 @@ S06 DEV-ilker ($dev) veya (dev-ilker) veya (hgo) | Ekran ölçeği: 1900px ≤ *
 
 [data-sekme~="yan"][data-sekme~="sağda"] { -webkit-box-orient: horizontal; -webkit-box-direction: reverse; -ms-flex-direction: row-reverse; flex-direction: row-reverse; }
 
+[data-imgelik~="kapsül"] { border-radius: 50%; font-size: 80%; padding: 2px; }
+
+[data-imgelik~="birincil"] { background-color: blue; }
+
 /* ========================================================================== MENÜ ÖRGÜSÜ s0.1 Sadece css yöntemiyle kurulmuş sekme örgüsü
 ----------------------------------------------------------------------------- */
 [data-menü] > input:first-child { display: none; }
