--- a/assets/scss/dvb.css
+++ b/assets/scss/dvb.css
@@ -1235,9 +1235,9 @@ S06 DEV-ilker ($dev) veya (dev-ilker) veya (hgo) | Ekran ölçeği: 1900px ≤ *
 
 [data-sekme~="yan"][data-sekme~="sağda"] { -webkit-box-orient: horizontal; -webkit-box-direction: reverse; -ms-flex-direction: row-reverse; flex-direction: row-reverse; }
 
-[data-imgelik~="kapsül"] { border-radius: 50%; font-size: 80%; padding: 2px; }
+[data-imgelik~="kapsül"] { border-radius: 10rem; padding-right: .6em; padding-left: .6em; }
 
-[data-imgelik~="birincil"] { background-color: blue; }
+[data-imgelik~="birincil"] { background-color: #007bff; color: #fff; }
 
 /* ========================================================================== MENÜ ÖRGÜSÜ s0.1 Sadece css yöntemiyle kurulmuş sekme örgüsü
 ----------------------------------------------------------------------------- */
