--- a/assets/scss/_imgelik.scss
+++ b/assets/scss/_imgelik.scss
@@ -1,10 +1,10 @@
 [data-imgelik]{
-
+  padding-right: .6em;
+  padding-left: .6em;
+  border-radius: 1rem;
 }
 [data-imgelik~="kapsül"]{
   border-radius: 10rem;
-  padding-right: .6em;
-  padding-left: .6em;
 }
 [data-imgelik~="birincil"]{
   background-color:#007bff;
