--- a/assets/scss/_imgelik.scss
+++ b/assets/scss/_imgelik.scss
@@ -1,12 +1,35 @@
 [data-imgelik]{
   padding-right: .6em;
   padding-left: .6em;
-  border-radius: 1rem;
+  border-radius: .4rem;
+  box-sizing:border-box;
+  font-size:85%;
+  border:2px solid transparent;
 }
+
 [data-imgelik~="kapsül"]{
   border-radius: 10rem;
+}
+[data-imgelik~="sivri"]{
+  border-radius:0;
+}
+[data-imgelik~="bombe"]{
+  border-radius: 50% / 10%;
+}
+[data-imgelik~="yuvar"]{
+  border-radius: 50% / 50%;
 }
 [data-imgelik~="birincil"]{
   background-color:#007bff;
   color:#fff;
+  border:2px solid #007bff;
+}
+[data-imgelik~="tel"]{
+  border-width:2px;
+  border-style:solid;
+  background-color:transparent;
+}
+[data-imgelik~="tel"][data-imgelik~="birincil"]{
+  border-color:#007bff;
+  color:#007bff;
 }
