--- a/assets/scss/_imgelik.scss
+++ b/assets/scss/_imgelik.scss
@@ -3,10 +3,15 @@
   padding-left: .6em;
   border-radius: .4rem;
   box-sizing:border-box;
-  font-size:85%;
+  font-size:.85em;
   border:2px solid transparent;
 }
-
+[data-imgelik~="küçük"]{
+  font-size:.70em;
+}
+[data-imgelik~="büyük"]{
+  font-size: 1.1em;
+}
 [data-imgelik~="kapsül"]{
   border-radius: 10rem;
 }
@@ -15,9 +20,8 @@
 }
 [data-imgelik~="bombe"]{
   border-radius: 50% / 10%;
-  
 }
-[data-imgelik~="yuvar"]{
+[data-imgelik~="yuvarlı"]{
   border-radius: 50% / 50%;
 }
 [data-imgelik~="birincil"]{
