--- a/assets/scss/_imgelik.scss
+++ b/assets/scss/_imgelik.scss
@@ -21,7 +21,7 @@
 [data-imgelik~="bombe"]{
   border-radius: 50% / 10%;
 }
-[data-imgelik~="yuvarlı"]{
+[data-imgelik~="yuvar"]{
   border-radius: 50% / 50%;
 }
 [data-imgelik~="birincil"]{
