--- a/assets/scss/dvb.css
+++ b/assets/scss/dvb.css
@@ -1235,13 +1235,23 @@ S06 DEV-ilker ($dev) veya (dev-ilker) veya (hgo) | Ekran ölçeği: 1900px ≤ *
 
 [data-sekme~="yan"][data-sekme~="sağda"] { -webkit-box-orient: horizontal; -webkit-box-direction: reverse; -ms-flex-direction: row-reverse; flex-direction: row-reverse; }
 
-[data-imgelik] { padding-right: .6em; padding-left: .6em; border-radius: .4rem; box-sizing: border-box; font-size: .85em; border: 2px solid transparent; }
+[data-imgelik] { padding-right: .6em; padding-left: .6em; border-radius: .4rem; box-sizing: border-box; font-size: .85em; border: 2px solid transparent; position: relative; }
 
 [data-imgelik~="küçük"] { font-size: .70em; }
 
 [data-imgelik~="büyük"] { font-size: 1.1em; }
 
 [data-imgelik~="kapsül"] { border-radius: 10rem; }
+
+[data-imgelik~="sol-kapsül"] { border-top-left-radius: 10rem; border-bottom-left-radius: 10rem; }
+
+[data-imgelik~="sağ-kapsül"] { border-top-right-radius: 10rem; border-bottom-right-radius: 10rem; }
+
+[data-imgelik~="boncuklu"]::before, [data-imgelik~="sol-boncuklu"]::before { border-width: .5em; border-style: solid; content: ""; border-radius: 100%; display: block; position: absolute; left: -7px; top: 3px; }
+
+[data-imgelik~="boncuklu"]::after, [data-imgelik~="sağ-boncuklu"]::after { border-width: .5em; border-style: solid; content: ""; border-radius: 100%; display: block; position: absolute; right: -7px; top: 3px; }
+
+[data-imgelik~="boncuklu"] { margin-left: 5px; margin-right: 5px; }
 
 [data-imgelik~="sivri"] { border-radius: 0; }
 
@@ -1253,7 +1263,7 @@ S06 DEV-ilker ($dev) veya (dev-ilker) veya (hgo) | Ekran ölçeği: 1900px ≤ *
 
 [data-imgelik~="tel"] { border-width: 2px; border-style: solid; background-color: transparent; }
 
-[data-imgelik~="tel"][data-imgelik~="birincil"] { border-color: #007bff; color: #007bff; }
+[data-imgelik~="tel"][data-imgelik~="birincil"], [data-imgelik~="birincil"]::after, [data-imgelik~="birincil"]::before { border-color: #007bff; color: #007bff; }
 
 /* ========================================================================== MENÜ ÖRGÜSÜ s0.1 Sadece css yöntemiyle kurulmuş sekme örgüsü
 ----------------------------------------------------------------------------- */
