--- a/assets/scss/dvb.css
+++ b/assets/scss/dvb.css
@@ -1290,5 +1290,24 @@ S06 DEV-ilker ($dev) veya (dev-ilker) veya (hgo) | Ekran ölçeği: 1900px ≤ *
 [data-menü~="varsayılan"] > ul li a:hover, [data-menü~="varsayılan"] > ul li a.etkin { background-color: #3c3181; }
 
 @media screen and (min-width: 576px) and (-ms-high-contrast: active), (-ms-high-contrast: none) { [data-kçk~="0"] { -ms-flex-preferred-size: auto !important; width: auto !important; } }
+[data-uyarı] { position: relative; width: 100%; }
+
+[data-uyarı] > div { border: 2px solid #f66; padding: 15px; background-color: #f33; border-radius: 4px; color: #fdd; position: relative; margin-bottom: 10px; }
+
+[data-uyarı] > div h2 { width: 100%; margin: 0; }
+
+[data-uyarı] > div p { width: 100%; margin: 10px 0; }
+
+[data-uyarı] > input { display: none; }
+
+[data-uyarı] > input:checked + div { opacity: 0; transition: all ease 0.3s; visibility: hidden; margin-top: -10vh; margin-right: 10vh; z-index: 100; }
+
+[data-uyarı] > input:checked + div { position: absolute; right: 0; left: 0; }
+
+[data-uyarı] > div { display: flex; }
+
+[data-uyarı] > div > div { display: flex; flex: 1; flex-wrap: wrap; }
+
+[data-uyarı] > div > label { display: flex; flex: 0; }
 
 /*# sourceMappingURL=dvb.css.map */
