--- a/assets/scss/_SekmeOrgusu.scss
+++ b/assets/scss/_SekmeOrgusu.scss
@@ -42,6 +42,7 @@
     -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
     @include sıralama(2);
     left:0;
+    height:0;
     flex-wrap: wrap;
   }
   [data-sekme] > input:checked + label + div{
@@ -51,6 +52,7 @@
     -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
     -webkit-transition: all ease 0.6s;
     transition: all ease 0.6s;
+    height:auto;
   }
 
   [data-sekme~="sağda"]{
