--- a/assets/scss/dvb.css
+++ b/assets/scss/dvb.css
@@ -1209,9 +1209,9 @@ S06 DEV-ilker ($dev) veya (dev-ilker) veya (hgo) | Ekran ölçeği: 1900px ≤ *
 
 [data-sekme] > label { -webkit-box-ordinal-group: 2; -ms-flex-order: 1; order: 1; display: block; /* özelleştirme +() */ margin-right: 2.8px; margin-right: 0.2rem; }
 
-[data-sekme] > input + label + div { display: -webkit-box; display: -ms-flexbox; display: flex; width: 100%; position: absolute; z-index: -100; opacity: 0; padding: 10px 0; -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)"; -webkit-box-ordinal-group: 3; -ms-flex-order: 2; order: 2; left: 0; flex-wrap: wrap; }
+[data-sekme] > input + label + div { display: -webkit-box; display: -ms-flexbox; display: flex; width: 100%; position: absolute; z-index: -100; opacity: 0; padding: 10px 0; -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)"; -webkit-box-ordinal-group: 3; -ms-flex-order: 2; order: 2; left: 0; height: 0; flex-wrap: wrap; }
 
-[data-sekme] > input:checked + label + div { position: relative; z-index: 0; opacity: 1; -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)"; -webkit-transition: all ease 0.6s; transition: all ease 0.6s; }
+[data-sekme] > input:checked + label + div { position: relative; z-index: 0; opacity: 1; -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)"; -webkit-transition: all ease 0.6s; transition: all ease 0.6s; height: auto; }
 
 [data-sekme~="sağda"] { -webkit-box-pack: end; -ms-flex-pack: end; justify-content: flex-end; }
 
