--- a/assets/scss/dvb.css
+++ b/assets/scss/dvb.css
@@ -1290,9 +1290,13 @@ S06 DEV-ilker ($dev) veya (dev-ilker) veya (hgo) | Ekran ölçeği: 1900px ≤ *
 [data-menü~="varsayılan"] > ul li a:hover, [data-menü~="varsayılan"] > ul li a.etkin { background-color: #3c3181; }
 
 @media screen and (min-width: 576px) and (-ms-high-contrast: active), (-ms-high-contrast: none) { [data-kçk~="0"] { -ms-flex-preferred-size: auto !important; width: auto !important; } }
-[data-uyarı] { position: relative; width: 100%; }
+[data-uyarı] { position: relative; width: 100%; font-family: roboto; }
 
-[data-uyarı] > div { border: 2px solid #f66; padding: 15px; background-color: #f33; border-radius: 4px; color: #fdd; position: relative; margin-bottom: 10px; }
+[data-uyarı] > div { border: 2px solid #f00; padding: 15px; background-color: #f33; border-radius: 4px; color: #fdd; position: relative; margin-bottom: 10px; }
+
+[data-uyarı~="kapatılamaz"] > div > label:last-child { display: none; }
+
+[data-uyarı~="tamamlandı"] > div { border: 2px solid #c3e6cb; background-color: #d4edda; color: #155724; }
 
 [data-uyarı] > div h2 { width: 100%; margin: 0; }
 
